Ejemplos y ejercicios del tema de ficheros

--- a/boletin_10/xml/web1.html
+++ b/boletin_10/xml/web1.html
@@ -8,7 +8,7 @@
 <body>
 
     <div id="principal">
-        <div id="Cabecera">
+        <div id="">
             <h1>Página web de ejemplo</h1>
         </div>
 
